[gd_scene load_steps=3 format=2]

[ext_resource path="res://Dino.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Dino" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 460 )
gravity = 5500
jump = 1500

[node name="GroundPosition" type="Position2D" parent="."]
position = Vector2( 0, 487 )

[node name="DinoPosition" type="Position2D" parent="."]
position = Vector2( 100, 460 )

[node name="GroundContainer" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
